--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
-    "bootstrap": "^4.5.0",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-drop-zone": "^4.1.1",
+    "react-dropzone": "^11.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "react-toastify": "^6.0.8",
+    "reactstrap": "^8.5.1",
+    "styled-components": "^5.1.1",
+    "typescript": "^3.7.5",
+    "xlsx": "^0.16.5"
   },
   "scripts": {
     "start": "react-scripts start",
