--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "aws-amplify": "^3.0.23",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
