--- a/package.json
+++ b/package.json
@@ -3,28 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@mui-treasury/components": "^1.9.1",
+    "@mui-treasury/styles": "^1.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/color": "^3.0.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.53",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "antd": "^4.6.5",
     "aws-amplify": "^3.0.23",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
+    "color": "^3.1.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.13.1",
     "react-drop-zone": "^4.1.1",
     "react-dropzone": "^11.0.2",
+    "react-google-font-loader": "^1.1.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.8",
     "reactstrap": "^8.5.1",
+    "read-excel-file": "^4.0.7",
     "styled-components": "^5.1.1",
     "typescript": "^3.7.5",
     "xlsx": "^0.16.5"
