--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.13.1",
     "react-drop-zone": "^4.1.1",
     "react-dropzone": "^11.0.2",
+    "react-excel-renderer": "^1.1.0",
     "react-google-font-loader": "^1.1.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
